--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase-tools": "^11.2.1",
     "quasar": "^2.6.0",
     "store2": "^2.14.1",
+    "uuid": "^8.3.2",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0",
