--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.8.1",
     "firebase-tools": "^11.2.1",
+    "js-base64": "^3.7.2",
     "quasar": "^2.6.0",
     "store2": "^2.14.1",
     "uuid": "^8.3.2",
