--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "ARTEL BURGER",
   "productName": "ARTELBURGER",
-  "author": "Сафронов Стас <warkamania5@yandex.ru>",
+  "author": "Сафронов Станислав <warkamania5@yandex.ru>",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
@@ -22,6 +22,7 @@
     "firebase": "^8.8.1",
     "firebase-tools": "^11.2.1",
     "js-base64": "^3.7.2",
+    "lodash": "^4.17.21",
     "quasar": "^2.6.0",
     "store2": "^2.14.1",
     "uuid": "^8.3.2",
