--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "1",
   "version": "0.0.1",
   "description": "ARTEL BURGER",
-  "productName": "ARTELBURGER",
+  "productName": "Артель Бургер",
   "author": "Сафронов Станислав <warkamania5@yandex.ru>",
   "private": true,
   "scripts": {
