--- a/src-capacitor/android/app/src/main/assets/capacitor.config.json
+++ b/src-capacitor/android/app/src/main/assets/capacitor.config.json
@@ -5,7 +5,7 @@
   "npmClient": "npm",
   "webDir": "www",
   "server": {
-    "url": "https://artel1-2iqu.vercel.app/"
+    "url": "https://artel2.vercel.app/"
   }
 }
 
