--- a/src-capacitor/android/app/src/main/assets/capacitor.config.json
+++ b/src-capacitor/android/app/src/main/assets/capacitor.config.json
@@ -5,7 +5,9 @@
   "npmClient": "npm",
   "webDir": "www",
   "server": {
-    "url": "https://artel4.vercel.app/"
+    "url": "https://artel5-9ggd.vercel.app/"
+
+
   }
 }
 
