--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^5.2.0-beta1",
     "bootstrap-icons": "^1.8.3",
     "core-js": "^3.6.5",
+    "emailjs": "^4.0.1",
     "firebase": "^8.8.1",
     "firebase-tools": "^11.2.1",
     "js-base64": "^3.7.2",
