--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "firebase-tools": "^11.2.1",
     "js-base64": "^3.7.2",
     "lodash": "^4.17.21",
+    "pinia": "^2.0.28",
     "quasar": "^2.6.0",
     "store2": "^2.14.1",
     "uuid": "^8.3.2",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0",
-    "vuex": "^4.0.1"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
