--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "uuid": "^8.3.2",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
+    "vue-qrcode-reader": "^3.1.5",
     "vue-reactive-storage": "github:ropbla9/vue-reactive-storage",
     "vue-router": "^4.0.0",
     "vuex": "^4.0.2"
