--- a/src-capacitor/android/app/src/main/assets/capacitor.config.json
+++ b/src-capacitor/android/app/src/main/assets/capacitor.config.json
@@ -5,13 +5,6 @@
   "npmClient": "npm",
   "webDir": "www",
   "server": {
-    "url": "https://artel5-9ggd.vercel.app/"
-
-
+    "url": "http://192.168.0.141:8080"
   }
 }
-
-
-
-
-
