--- a/src-capacitor/android/app/src/main/assets/capacitor.config.json
+++ b/src-capacitor/android/app/src/main/assets/capacitor.config.json
@@ -1,10 +1,10 @@
 {
   "appId": "org.capacitor.quasar.app",
   "appName": "Артель Бургер",
-  "bundledWebRuntime": false,
+  "bundledWebRuntime": true,
   "npmClient": "npm",
   "webDir": "www",
   "server": {
-    "url": "http://192.168.0.141:8080"
+    "url": "https://artel5-9ggd.vercel.app/#/"
   }
 }
