--- a/package.json
+++ b/package.json
@@ -8,41 +8,29 @@
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev",
-    "build": "quasar build",
-    "build:pwa": "quasar build -m pwa"
+    "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@quasar/extras": "^1.0.0",
-    "@vueuse/core": "^9.13.0",
     "axios": "^0.21.4",
-    "bootstrap": "^5.2.0-beta1",
-    "bootstrap-icons": "^1.8.3",
-    "canvas": "^2.11.2",
     "core-js": "^3.6.5",
-    "emailjs": "^4.0.1",
     "firebase": "^8.8.1",
     "firebase-tools": "^11.2.1",
-    "js-base64": "^3.7.2",
-    "lodash": "^4.17.21",
-    "pinia": "^2.0.28",
-    "qs": "^6.11.0",
+    "js-base64": "^3.7.5",
+    "pinia": "^2.0.11",
     "quasar": "^2.6.0",
-    "store2": "^2.14.1",
-    "uuid": "^8.3.2",
+    "underscore": "^1.13.6",
+    "uuid": "^9.0.0",
     "vue": "^3.0.0",
-    "vue-barcode-reader": "^1.0.3",
     "vue-i18n": "^9.0.0",
-    "vue-qrcode-reader": "^3.1.5",
-    "vue-reactive-storage": "github:ropbla9/vue-reactive-storage",
     "vue-router": "^4.0.0",
-    "vue3-qr-reader": "^1.0.0",
-    "vuex": "^4.0.2"
+    "vue3-qr-reader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
     "@quasar/app-webpack": "^3.0.0",
+    "@types/underscore": "^1.11.5",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^8.5.0",
