--- a/src-capacitor/android/app/src/main/assets/capacitor.config.json
+++ b/src-capacitor/android/app/src/main/assets/capacitor.config.json
@@ -1,10 +1,7 @@
 {
-  "appId": "org.capacitor.quasar.app",
-  "appName": "Артель Бургер",
-  "bundledWebRuntime": true,
-  "npmClient": "npm",
-  "webDir": "www",
-  "server": {
-    "url": "https://artel5-9ggd.vercel.app/#/"
-  }
+	"appId": "org.capacitor.quasar.app.burger",
+	"appName": "Артель Бургер",
+	"bundledWebRuntime": false,
+	"npmClient": "npm",
+	"webDir": "www"
 }
