--- a/src-capacitor/capacitor.config.json
+++ b/src-capacitor/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "org.capacitor.quasar.app",
+  "appId": "org.capacitor.quasar.app.burger",
   "appName": "Артель Бургер",
   "bundledWebRuntime": false,
   "npmClient": "npm",
