--- a/src-capacitor/package.json
+++ b/src-capacitor/package.json
@@ -5,8 +5,10 @@
   "author": "Сафронов Станислав <warkamania5@yandex.ru>",
   "private": true,
   "dependencies": {
-    "@capacitor/android": "^2.5.0",
-    "@capacitor/cli": "^2.0.0",
-    "@capacitor/core": "^2.0.0"
+    "@capacitor/android": "^5.0.5",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/cli": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/splash-screen": "^5.0.0"
   }
 }
